Added partitioningBy example